2013-10-22  Bill Schmidt  <wschmidt@vnet.ibm.com>

	* config/rs6000/rs6000.c (altivec_expand_vec_perm_const): Reverse
	meaning of merge-high and merge-low masks for little endian; avoid
	use of vector-pack masks for little endian for mismatched modes.

2013-10-22  Jan-Benedict Glaw  <jbglaw@lug-owl.de>

	* config/tilepro/tilepro.c: Include "tree.h".

2013-10-22  Andreas Schwab  <schwab@suse.de>

	* config/m68k/m68k.c (notice_update_cc): Handle register conflict
	with PRE_DEC.

2013-10-22  Paolo Carlini  <paolo.carlini@oracle.com>

	* doc/contrib.texi ([Fran@,{c}ois Dumont], [Tim Shen],
	[Ed Smith-Rowland]): New entries.
	([Stephen M. Webb]): Update.

2013-10-22  Andrew MacLeod  <amacleod@redhat.com>

	* tree-ssa-ter.h: Remove duplicate copy of file contents.

2013-10-21  Marek Polacek  <polacek@redhat.com>

	PR middle-end/58809
	* fold-const.c (fold_range_test): Return 0 if the type is not
	an integral type.

2013-10-21  Richard Sandiford  <rdsandiford@googlemail.com>

	* system.h: Move hwint.h include further down.
	* hwint.h (sext_hwi, zext_hwi): Define unconditionally.  Add
	gcc_checking_asserts.
	* hwint.c (sext_hwi, zext_hwi): Delete ENABLE_CHECKING versions.

2013-10-21  Bernd Edlinger  <bernd.edlinger@hotmail.de>

	Fix volatile issues in optimize_bit_field_compare.
	* fold-const.c (optimize_bit_field_compare): Bail out if
	lvolatilep or rvolatilep.

2013-10-21  Bernd Edlinger  <bernd.edlinger@hotmail.de>

	Fix DECL_BIT_FIELD depencency on flag_strict_volatile_bitfields
	and get_inner_reference returning different pmode for non-volatile
	bit-field members dependent on flag_strict_volatile_bitfields.
	* stor-layout.c (layout_decl): Remove special handling of
	flag_strict_volatile_bitfields.
	* expr.c (get_inner_reference): Don't use DECL_BIT_FIELD
	if flag_strict_volatile_bitfields > 0 and TREE_THIS_VOLATILE.

2013-10-21  Paulo Matos  <pmatos@broadcom.com>

	* ipa-inline.c (edge_badness): Cap edge->count at max_count for badness
	calculations.
